updated navigation to match design

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -3,32 +3,200 @@
     <div class="skiptocontent">
         <a href="#maincontent">skip to main content</a>
     </div>
-
-    <nav class="nav">
-        <span class="flex-1-0 logo-wrapper">
+    <nav class="meta-nav" id="meta-nav">
+      <ul class="nav-menu">
+          <li class="nav-menu-item"><a href="/news">News</a></li>
+          <li class="nav-menu-item"><a href="/contact">Contact</a></li>
+          <li class="nav-menu-item"><a href="/about">About</a></li>
+          <li class="nav-menu-item"><a href="/give">Give</a></li>
+          <li class="nav-menu-item"><a href="/login">Login</a></li>
+      </ul>
+      <span class="logo-wrapper">
+          <a class="logo rice-logo" href="/" aria-label="Rice University">
+              <img src="/images/rice.png" alt="Rice University logo" width="74" height="32" />
+          </a>
+      </span>
+  </nav>
+  <nav class="nav" id="main-nav">
+        <span class="logo-wrapper">
             <a href="/" aria-label="Home Page">
                 <span class="logo os-logo">
-                    <img src="/images/logo.png" alt="OpenStax logo" height="40" />
-                </span>
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  	 viewBox="0 0 130.4 29.6" style="enable-background:new 0 0 130.4 29.6;" xml:space="preserve">
+
+                  <symbol  id="Logo" viewBox="15 -60.7 200 45.7">
+                  	<g>
+                  		<g>
+                  			<g>
+                  				<path class="st0" d="M99-39.6c0,0.9,0.2,1.7,0.5,2.5c0.3,0.8,0.7,1.4,1.3,2c0.5,0.6,1.2,1,2,1.3c0.8,0.3,1.6,0.5,2.5,0.5
+                  					c0.9,0,1.7-0.2,2.5-0.5c0.8-0.3,1.4-0.7,2-1.3c0.6-0.6,1-1.2,1.3-2c0.3-0.8,0.5-1.6,0.5-2.5c0-0.9-0.2-1.7-0.5-2.5
+                  					c-0.3-0.8-0.7-1.4-1.3-2c-0.6-0.6-1.2-1-2-1.3c-0.8-0.3-1.6-0.5-2.5-0.5c-0.9,0-1.8,0.2-2.5,0.5c-0.8,0.3-1.4,0.7-2,1.3
+                  					c-0.5,0.6-1,1.2-1.3,2C99.1-41.4,99-40.5,99-39.6z M100.5-39.6c0-0.7,0.1-1.3,0.3-1.9c0.2-0.6,0.5-1.1,0.9-1.5
+                  					c0.4-0.4,0.9-0.8,1.5-1c0.6-0.3,1.2-0.4,2-0.4c0.7,0,1.4,0.1,2,0.4c0.6,0.3,1.1,0.6,1.5,1c0.4,0.4,0.7,1,0.9,1.5
+                  					c0.2,0.6,0.3,1.2,0.3,1.9c0,0.7-0.1,1.3-0.3,1.9c-0.2,0.6-0.5,1.1-0.9,1.5c-0.4,0.4-0.9,0.8-1.5,1c-0.6,0.3-1.2,0.4-2,0.4
+                  					c-0.7,0-1.4-0.1-2-0.4c-0.6-0.3-1.1-0.6-1.5-1c-0.4-0.4-0.7-1-0.9-1.5C100.6-38.3,100.5-39,100.5-39.6z"/>
+                  				<path class="st0" d="M114.6-33.7h1.5v-2.1h0.1c0.2,0.4,0.5,0.8,0.9,1.1c0.4,0.3,0.8,0.5,1.2,0.7c0.4,0.2,0.9,0.3,1.3,0.4
+                  					c0.5,0.1,0.9,0.1,1.4,0.1c0.9,0,1.7-0.2,2.5-0.5c0.8-0.3,1.4-0.7,2-1.3c0.6-0.6,1-1.2,1.3-2c0.3-0.8,0.5-1.6,0.5-2.5
+                  					c0-0.9-0.2-1.7-0.5-2.5c-0.3-0.8-0.7-1.4-1.3-2c-0.6-0.6-1.2-1-2-1.3c-0.8-0.3-1.6-0.5-2.5-0.5c-0.4,0-0.9,0-1.4,0.1
+                  					c-0.5,0.1-0.9,0.2-1.3,0.4c-0.4,0.2-0.8,0.4-1.2,0.7c-0.4,0.3-0.7,0.7-0.9,1.1h-0.1v-8h-1.5V-33.7z M116-39.6
+                  					c0-0.7,0.1-1.3,0.4-1.9c0.3-0.6,0.6-1.1,1.1-1.5c0.4-0.4,1-0.8,1.6-1c0.6-0.3,1.3-0.4,2-0.4c0.7,0,1.4,0.1,2,0.4
+                  					c0.6,0.3,1.1,0.6,1.5,1c0.4,0.4,0.7,1,0.9,1.5c0.2,0.6,0.3,1.2,0.3,1.9c0,0.7-0.1,1.3-0.3,1.9c-0.2,0.6-0.5,1.1-0.9,1.5
+                  					c-0.4,0.4-0.9,0.8-1.5,1c-0.6,0.3-1.2,0.4-2,0.4c-0.7,0-1.4-0.1-2-0.4s-1.1-0.6-1.6-1c-0.4-0.4-0.8-1-1.1-1.5
+                  					C116.1-38.3,116-39,116-39.6z"/>
+                  				<path class="st0" d="M141.2-43.3c-0.6-0.9-1.3-1.6-2.2-2c-0.9-0.4-1.9-0.6-2.9-0.6c-0.9,0-1.7,0.2-2.5,0.5
+                  					c-0.7,0.3-1.4,0.7-1.9,1.3c-0.5,0.6-0.9,1.2-1.2,2c-0.3,0.8-0.4,1.6-0.4,2.5c0,0.9,0.1,1.7,0.4,2.5c0.3,0.8,0.7,1.4,1.2,2
+                  					c0.5,0.6,1.2,1,1.9,1.3c0.7,0.3,1.5,0.5,2.4,0.5c0.9,0,1.7-0.2,2.4-0.5c0.7-0.3,1.3-0.7,1.8-1.3c0.5-0.5,0.8-1.1,1.1-1.8
+                  					c0.2-0.7,0.4-1.3,0.4-2V-40h-10c0-0.3,0.1-0.7,0.2-1.2c0.1-0.5,0.4-1,0.7-1.5c0.3-0.5,0.8-0.9,1.4-1.2c0.6-0.3,1.3-0.5,2.2-0.5
+                  					c0.8,0,1.6,0.2,2.3,0.6c0.7,0.4,1.3,0.9,1.7,1.5L141.2-43.3z M140-38.6c0,0.5-0.1,1-0.3,1.5c-0.2,0.5-0.5,0.9-0.9,1.2
+                  					c-0.4,0.4-0.8,0.6-1.3,0.8c-0.5,0.2-1,0.3-1.6,0.3c-0.8,0-1.5-0.2-2.1-0.5c-0.6-0.3-1-0.7-1.3-1.2c-0.3-0.4-0.6-0.9-0.7-1.3
+                  					c-0.1-0.4-0.2-0.7-0.2-0.9H140z"/>
+                  				<path class="st0" d="M145-37c0,0.2,0,0.5,0,0.8c0,0.3,0,0.6,0,1c0,0.3,0,0.6,0,0.9c0,0.3,0,0.5,0,0.7h1.5c0-0.4,0-0.9,0-1.3
+                  					c0-0.4,0-0.7,0.1-0.8h0.1c0.3,0.7,0.8,1.2,1.5,1.7c0.7,0.5,1.6,0.7,2.5,0.7c0.9,0,1.7-0.1,2.3-0.4c0.6-0.3,1-0.7,1.4-1.1
+                  					c0.3-0.5,0.6-1,0.7-1.6c0.1-0.6,0.2-1.3,0.2-1.9v-7.1h-1.5v7c0,0.5,0,0.9-0.1,1.4c-0.1,0.5-0.2,0.9-0.5,1.2
+                  					c-0.2,0.4-0.5,0.6-0.9,0.9c-0.4,0.2-0.9,0.3-1.5,0.3c-0.6,0-1.1-0.1-1.6-0.3c-0.5-0.2-0.9-0.5-1.3-0.9c-0.4-0.4-0.7-0.9-0.9-1.5
+                  					c-0.2-0.6-0.3-1.3-0.3-2.2v-5.9H145V-37z"/>
+                  				<path class="st0" d="M165.6-36.6c-0.6,0.8-1.4,1.3-2.4,1.3c-0.4,0-0.8-0.1-1.2-0.3c-0.4-0.2-0.6-0.5-0.6-1
+                  					c0-0.4,0.2-0.7,0.5-0.8c0.3-0.2,0.7-0.3,1.2-0.4c0.5-0.1,1-0.2,1.6-0.4c0.6-0.1,1.1-0.3,1.6-0.6c0.5-0.3,0.9-0.6,1.2-1.1
+                  					c0.3-0.5,0.5-1.1,0.5-1.9c0-0.7-0.2-1.4-0.5-1.9c-0.3-0.5-0.7-0.9-1.2-1.2c-0.5-0.3-1.1-0.5-1.7-0.7c-0.6-0.1-1.3-0.2-1.9-0.2
+                  					c-1,0-1.8,0.1-2.7,0.4c-0.8,0.3-1.5,0.8-2.2,1.5l2.1,1.9c0.4-0.4,0.8-0.8,1.3-1.1c0.5-0.3,1-0.4,1.7-0.4c0.2,0,0.5,0,0.7,0.1
+                  					c0.2,0.1,0.5,0.1,0.7,0.3c0.2,0.1,0.4,0.3,0.5,0.5c0.1,0.2,0.2,0.4,0.2,0.6c0,0.4-0.2,0.7-0.5,1c-0.3,0.2-0.7,0.4-1.2,0.5
+                  					c-0.5,0.1-1,0.2-1.6,0.4c-0.6,0.1-1.1,0.3-1.6,0.5s-0.9,0.6-1.2,1c-0.3,0.4-0.5,1.1-0.5,1.9c0,0.7,0.1,1.3,0.4,1.8
+                  					c0.3,0.5,0.7,0.9,1.1,1.2c0.5,0.3,1,0.6,1.6,0.7c0.6,0.2,1.2,0.2,1.8,0.2c0.8,0,1.6-0.1,2.4-0.4c0.8-0.3,1.5-0.8,2-1.5
+                  					L165.6-36.6z"/>
+                  				<path class="st0" d="M169-35.8v2.6h2.5v3.6h3.1v-3.6h3.4v-2.6h-3.4v-5.4c0-0.6,0.1-1.1,0.3-1.5c0.2-0.4,0.7-0.5,1.4-0.5
+                  					c0.3,0,0.6,0,0.9,0.1c0.3,0.1,0.6,0.2,0.8,0.3v-2.6c-0.3-0.2-0.7-0.3-1.2-0.3c-0.5-0.1-0.9-0.1-1.2-0.1c-0.8,0-1.5,0.1-2,0.3
+                  					c-0.5,0.2-0.9,0.5-1.2,0.8c-0.3,0.4-0.5,0.8-0.6,1.4c-0.1,0.5-0.2,1.2-0.2,1.9v5.7H169z"/>
+                  				<path class="st0" d="M188.2-43.9L188.2-43.9c-0.5-0.7-1.1-1.2-1.8-1.5c-0.7-0.3-1.4-0.5-2.3-0.5c-0.6,0-1.1,0.1-1.7,0.2
+                  					c-0.5,0.2-1,0.4-1.4,0.7c-0.4,0.3-0.8,0.7-1,1.2c-0.3,0.5-0.4,1-0.4,1.6c0,0.7,0.1,1.2,0.4,1.7c0.2,0.5,0.6,0.9,1,1.2
+                  					c0.4,0.3,0.9,0.6,1.4,0.8c0.5,0.2,1.1,0.3,1.7,0.4c0.6,0.1,1.2,0.2,1.7,0.2c0.6,0,1.1,0,1.6,0h0.8v0.3c0,0.8-0.3,1.4-0.8,1.7
+                  					c-0.5,0.4-1.2,0.6-2,0.6c-0.7,0-1.3-0.1-1.8-0.3c-0.6-0.2-1.1-0.5-1.5-0.9l-1.6,1.6c0.7,0.7,1.5,1.2,2.4,1.5
+                  					c0.9,0.3,1.9,0.5,2.8,0.5c0.9,0,1.6-0.1,2.2-0.3c0.6-0.2,1.1-0.5,1.5-0.8c0.4-0.3,0.7-0.7,0.9-1.1c0.2-0.4,0.4-0.8,0.5-1.2
+                  					c0.1-0.4,0.2-0.8,0.2-1.2c0-0.4,0-0.7,0-1v-7.1h-2.8V-43.9z M188-40h-0.6c-0.4,0-0.9,0-1.4-0.1c-0.5,0-1-0.1-1.5-0.2
+                  					c-0.5-0.1-0.9-0.3-1.2-0.6c-0.3-0.2-0.5-0.6-0.5-1c0-0.3,0.1-0.5,0.2-0.7c0.1-0.2,0.3-0.4,0.5-0.5c0.2-0.1,0.4-0.2,0.7-0.3
+                  					c0.3-0.1,0.5-0.1,0.8-0.1c1.1,0,1.9,0.3,2.4,0.8c0.5,0.5,0.8,1.2,0.8,2.1V-40z"/>
+                  				<path class="st0" d="M197.5-38.9l-4.3,5.7h3.8l2.5-3.7l2.7,3.7h3.5l-4.2-5.7l5-6.6h-3.8l-3.2,4.4l-3.2-4.4h-3.7L197.5-38.9z"/>
+                  			</g>
+                  			<g>
+                  				<path class="st0" d="M208.9-33.8h-1.1v0.6h2.7v-0.6h-1.1v-2.9h-0.6V-33.8z M211.2-33.2h0.9l1-2.6l1,2.6h0.9v-3.5h-0.6v2.9h0
+                  					l-1.1-2.9h-0.4l-1.1,2.9h0v-2.9h-0.6V-33.2z"/>
+                  			</g>
+                  		</g>
+                  		<g>
+                  			<path class="st0" d="M87.8-25.1c-0.1-1.3-1.2-2.3-2.5-2.3l-55.5,2.6c-1.3,0.1-2.3,1.2-2.3,2.5l0.2,4.9c0.1,1.3,1.2,2.3,2.5,2.3
+                  				l55.5-2.6c1.3-0.1,2.3-1.2,2.3-2.5L87.8-25.1z"/>
+                  			<path class="st0" d="M69.5-43.1c0-0.8-0.6-1.4-1.4-1.4H22.9c-0.8,0-1.4,0.6-1.4,1.4v7.1c0,0.8,0.6,1.4,1.4,1.4h45.2
+                  				c0.8,0,1.4-0.6,1.4-1.4V-43.1z"/>
+                  			<path class="st0" d="M83.4-50.8c0-0.8-0.6-1.4-1.3-1.5l-51-1.6c-0.8,0-1.4,0.6-1.4,1.4l-0.1,4.2c0,0.8,0.6,1.4,1.3,1.5l51,1.6
+                  				c0.8,0,1.4-0.6,1.4-1.4L83.4-50.8z"/>
+                  			<path class="st0" d="M76.6-59.3c0-0.8-0.6-1.4-1.3-1.4H26.6c-0.7,0-1.3,0.6-1.3,1.4v2.8c0,0.8,0.6,1.4,1.3,1.4h48.6
+                  				c0.7,0,1.3-0.6,1.3-1.4V-59.3z"/>
+                  			<path class="st0" d="M77.8-31.2c0-0.6-0.9-1.1-1.9-1.1h-59c-1.1,0-1.9,0.5-1.9,1.1v2.3c0,0.6,0.9,1.1,1.9,1.1h59
+                  				c1.1,0,1.9-0.5,1.9-1.1V-31.2z"/>
+                  		</g>
+                  	</g>
+                  </symbol>
+                  <g id="footer">
+                  </g>
+                  <g id="allies">
+                  </g>
+                  <g id="impact">
+                  </g>
+                  <g id="give">
+                  </g>
+                  <g id="about">
+                  </g>
+                  <g id="feature">
+                  </g>
+                  <g id="home">
+                  </g>
+                  <g id="nav2">
+                  	<g id="Logo_2">
+                  	</g>
+                  	<g id="Logo_2_1_">
+                  		<g>
+                  			<path class="st5" d="M61.8,13c-0.4-0.4-0.8-0.6-1.3-0.8c-0.5-0.2-1-0.3-1.6-0.3c-0.6,0-1.1,0.1-1.6,0.3c-0.5,0.2-0.9,0.5-1.3,0.8
+                  				c-0.4,0.4-0.6,0.8-0.8,1.3c-0.2,0.5-0.3,1-0.3,1.6c0,0.6,0.1,1.1,0.3,1.6c0.2,0.5,0.5,0.9,0.8,1.3c0.4,0.4,0.8,0.6,1.3,0.8
+                  				c0.5,0.2,1.1,0.3,1.6,0.3c0.6,0,1.1-0.1,1.6-0.3c0.5-0.2,0.9-0.5,1.3-0.8c0.4-0.4,0.6-0.8,0.8-1.3c0.2-0.5,0.3-1,0.3-1.6
+                  				c0-0.6-0.1-1.1-0.3-1.6C62.4,13.8,62.1,13.4,61.8,13z M61.7,17.2c-0.1,0.4-0.3,0.7-0.6,1c-0.3,0.3-0.6,0.5-1,0.7
+                  				c-0.4,0.2-0.8,0.3-1.3,0.3c-0.5,0-0.9-0.1-1.3-0.3c-0.4-0.2-0.7-0.4-1-0.7c-0.3-0.3-0.5-0.6-0.6-1c-0.1-0.4-0.2-0.8-0.2-1.2
+                  				c0-0.4,0.1-0.8,0.2-1.2c0.1-0.4,0.3-0.7,0.6-1c0.3-0.3,0.6-0.5,1-0.7c0.4-0.2,0.8-0.2,1.3-0.2c0.5,0,0.9,0.1,1.3,0.2
+                  				c0.4,0.2,0.7,0.4,1,0.7c0.3,0.3,0.5,0.6,0.6,1c0.1,0.4,0.2,0.8,0.2,1.2C61.9,16.4,61.8,16.8,61.7,17.2z"/>
+                  			<path class="st5" d="M72,13c-0.4-0.4-0.8-0.6-1.3-0.8c-0.5-0.2-1-0.3-1.6-0.3c-0.3,0-0.6,0-0.9,0.1c-0.3,0.1-0.6,0.2-0.9,0.3
+                  				c-0.3,0.1-0.5,0.3-0.8,0.5c-0.2,0.2-0.4,0.4-0.6,0.7h0v-1.4h-1v11.5h1v-5.2h0c0.2,0.3,0.4,0.5,0.6,0.7c0.2,0.2,0.5,0.4,0.8,0.5
+                  				c0.3,0.1,0.6,0.2,0.9,0.3c0.3,0.1,0.6,0.1,0.9,0.1c0.6,0,1.1-0.1,1.6-0.3c0.5-0.2,0.9-0.5,1.3-0.8c0.4-0.4,0.6-0.8,0.8-1.3
+                  				c0.2-0.5,0.3-1,0.3-1.6c0-0.6-0.1-1.1-0.3-1.6C72.7,13.8,72.4,13.4,72,13z M72,17.2c-0.1,0.4-0.3,0.7-0.6,1
+                  				c-0.3,0.3-0.6,0.5-1,0.7c-0.4,0.2-0.8,0.3-1.3,0.3c-0.5,0-0.9-0.1-1.3-0.3c-0.4-0.2-0.7-0.4-1-0.7c-0.3-0.3-0.5-0.6-0.7-1
+                  				c-0.2-0.4-0.3-0.8-0.3-1.2c0-0.4,0.1-0.8,0.3-1.2c0.2-0.4,0.4-0.7,0.7-1c0.3-0.3,0.6-0.5,1-0.7c0.4-0.2,0.8-0.2,1.3-0.2
+                  				c0.5,0,0.9,0.1,1.3,0.2c0.4,0.2,0.7,0.4,1,0.7c0.3,0.3,0.5,0.6,0.6,1c0.1,0.4,0.2,0.8,0.2,1.2C72.2,16.4,72.1,16.8,72,17.2z"/>
+                  			<path class="st5" d="M81.6,13c-0.3-0.3-0.7-0.6-1.1-0.8c-0.5-0.2-1-0.3-1.6-0.3c-0.6,0-1.1,0.1-1.6,0.3c-0.5,0.2-0.9,0.5-1.2,0.9
+                  				c-0.3,0.4-0.6,0.8-0.8,1.3c-0.2,0.5-0.3,1-0.3,1.6c0,0.6,0.1,1.1,0.3,1.6c0.2,0.5,0.5,0.9,0.8,1.3c0.3,0.4,0.8,0.6,1.2,0.8
+                  				c0.5,0.2,1,0.3,1.6,0.3c0.7,0,1.3-0.1,1.9-0.4c0.6-0.3,1.1-0.7,1.5-1.3l-0.7-0.6c-0.3,0.4-0.6,0.8-1.1,1c-0.5,0.2-1,0.4-1.5,0.4
+                  				c-0.6,0-1.1-0.1-1.5-0.3c-0.4-0.2-0.7-0.5-0.9-0.8c-0.2-0.3-0.4-0.6-0.5-1C76,16.7,76,16.4,76,16.2h6.5v-0.7
+                  				c0-0.4-0.1-0.9-0.2-1.3C82.1,13.7,81.9,13.4,81.6,13z M76,15.3c0-0.1,0-0.3,0.1-0.6c0.1-0.3,0.2-0.6,0.5-0.8
+                  				c0.2-0.3,0.5-0.5,0.9-0.8c0.4-0.2,0.8-0.3,1.4-0.3c0.4,0,0.7,0.1,1,0.2c0.3,0.1,0.6,0.3,0.9,0.5c0.2,0.2,0.4,0.5,0.6,0.8
+                  				c0.1,0.3,0.2,0.6,0.2,1H76z"/>
+                  			<path class="st5" d="M90.8,12.9c-0.2-0.3-0.5-0.6-0.9-0.7c-0.4-0.2-0.9-0.3-1.5-0.3c-0.6,0-1.2,0.2-1.6,0.5
+                  				c-0.5,0.3-0.8,0.7-1,1.1h-0.1c0-0.1,0-0.3,0-0.5c0-0.3,0-0.5,0-0.8h-1c0,0.1,0,0.2,0,0.4c0,0.2,0,0.4,0,0.6c0,0.2,0,0.4,0,0.6
+                  				c0,0.2,0,0.4,0,0.5v5.5h1v-3.9c0-0.5,0.1-1,0.2-1.4c0.1-0.4,0.3-0.7,0.6-1c0.2-0.3,0.5-0.5,0.9-0.6c0.3-0.1,0.7-0.2,1-0.2
+                  				c0.4,0,0.7,0.1,1,0.2c0.3,0.1,0.4,0.3,0.6,0.6c0.1,0.2,0.2,0.5,0.3,0.8c0.1,0.3,0.1,0.6,0.1,0.9v4.5h1v-4.6c0-0.4,0-0.8-0.1-1.2
+                  				C91.2,13.6,91.1,13.2,90.8,12.9z"/>
+                  			<path class="st5" d="M98.7,15.5c-0.3-0.2-0.7-0.3-1-0.4c-0.4-0.1-0.7-0.2-1.1-0.2c-0.3-0.1-0.6-0.2-0.8-0.3
+                  				c-0.2-0.1-0.3-0.3-0.3-0.5c0-0.3,0.1-0.5,0.4-0.6c0.3-0.1,0.5-0.2,0.8-0.2c0.7,0,1.2,0.3,1.6,0.8l1.3-1.2
+                  				c-0.3-0.4-0.8-0.8-1.3-0.9c-0.5-0.2-1.1-0.3-1.6-0.3c-0.4,0-0.8,0-1.2,0.2c-0.4,0.1-0.7,0.3-1,0.5c-0.3,0.2-0.5,0.5-0.7,0.8
+                  				c-0.2,0.3-0.3,0.7-0.3,1.2c0,0.5,0.1,0.9,0.3,1.2c0.2,0.3,0.5,0.5,0.8,0.7c0.3,0.2,0.7,0.3,1.1,0.3c0.4,0.1,0.7,0.2,1,0.2
+                  				c0.3,0.1,0.6,0.2,0.8,0.3c0.2,0.1,0.3,0.3,0.3,0.6c0,0.2,0,0.3-0.1,0.4c-0.1,0.1-0.2,0.2-0.3,0.3c-0.1,0.1-0.3,0.1-0.4,0.2
+                  				c-0.2,0-0.3,0-0.5,0c-0.4,0-0.8-0.1-1.1-0.3c-0.3-0.2-0.6-0.4-0.8-0.7l-1.3,1.3c0.4,0.5,0.9,0.8,1.4,1c0.5,0.2,1.1,0.3,1.7,0.3
+                  				c0.4,0,0.8,0,1.2-0.1s0.8-0.2,1.1-0.4c0.3-0.2,0.6-0.5,0.8-0.8c0.2-0.3,0.3-0.7,0.3-1.2c0-0.5-0.1-0.9-0.3-1.2
+                  				C99.3,15.9,99,15.7,98.7,15.5z"/>
+                  			<path class="st5" d="M104.1,9.5h-2v2.3h-1.7v1.7h1.7v3.7c0,0.5,0,0.9,0.1,1.2c0.1,0.4,0.2,0.7,0.4,0.9c0.2,0.2,0.5,0.4,0.8,0.5
+                  				c0.3,0.1,0.8,0.2,1.3,0.2c0.2,0,0.5,0,0.8-0.1c0.3,0,0.6-0.1,0.8-0.2V18c-0.1,0.1-0.3,0.2-0.5,0.2c-0.2,0-0.4,0.1-0.6,0.1
+                  				c-0.4,0-0.7-0.1-0.9-0.4c-0.2-0.2-0.2-0.6-0.2-0.9v-3.5h2.2v-1.7h-2.2V9.5z"/>
+                  			<path class="st5" d="M114.6,13.8c-0.1-0.3-0.2-0.5-0.3-0.8c-0.1-0.3-0.3-0.5-0.6-0.7c-0.3-0.2-0.6-0.4-1-0.5
+                  				c-0.4-0.1-0.9-0.2-1.4-0.2c-0.6,0-1.3,0.1-1.9,0.3c-0.6,0.2-1.1,0.5-1.6,1l1.1,1.1c0.3-0.3,0.6-0.5,1-0.6
+                  				c0.4-0.2,0.8-0.2,1.2-0.2c0.5,0,1,0.1,1.3,0.4c0.3,0.2,0.5,0.6,0.5,1.1v0.2h-0.5c-0.3,0-0.7,0-1.1,0c-0.4,0-0.8,0.1-1.1,0.1
+                  				c-0.4,0.1-0.7,0.2-1.1,0.3c-0.3,0.1-0.7,0.3-0.9,0.5c-0.3,0.2-0.5,0.5-0.6,0.8c-0.2,0.3-0.2,0.7-0.2,1.1c0,0.4,0.1,0.7,0.3,1.1
+                  				s0.4,0.6,0.7,0.7c0.3,0.2,0.6,0.4,0.9,0.5c0.4,0.1,0.7,0.2,1.1,0.2c0.5,0,1-0.1,1.5-0.3c0.4-0.2,0.8-0.5,1.1-1h0v1.1h1.8v-4.6
+                  				c0-0.2,0-0.4,0-0.7C114.7,14.3,114.7,14,114.6,13.8z M112.8,16.7c0,0.6-0.2,1-0.5,1.3c-0.3,0.3-0.8,0.5-1.5,0.5
+                  				c-0.2,0-0.3,0-0.5-0.1c-0.2,0-0.3-0.1-0.5-0.2c-0.1-0.1-0.2-0.2-0.3-0.3c-0.1-0.1-0.1-0.3-0.1-0.5c0-0.3,0.1-0.5,0.3-0.7
+                  				c0.2-0.2,0.5-0.3,0.8-0.4c0.3-0.1,0.6-0.1,1-0.2c0.3,0,0.7,0,0.9,0h0.4V16.7z"/>
+                  			<polygon class="st5" points="124.3,11.8 122,11.8 120.3,14.2 118.7,11.8 116.2,11.8 119,15.5 115.8,19.8 118.2,19.8 120.3,16.9
+                  				122.4,19.8 124.8,19.8 121.6,15.5 			"/>
+                  			<polygon class="st5" points="129.9,11.8 129.2,13.5 128.5,11.8 128,11.8 128,14 128.3,14 128.3,12.1 128.3,12.1 129.1,14
+                  				129.3,14 130.1,12.1 130.1,12.1 130.1,14 130.4,14 130.4,11.8 			"/>
+                  			<polygon class="st5" points="125.7,12.1 126.4,12.1 126.4,14 126.8,14 126.8,12.1 127.5,12.1 127.5,11.8 125.7,11.8 			"/>
+                  		</g>
+                  		<path id="green" class="st11" d="M47.5,6.5c0,0.8-0.8,1.5-1.6,1.5L9.6,6.3c-0.9,0-1.5-0.8-1.5-1.6l0.2-3.2C8.3,0.6,9.1,0,9.9,0
+                  			l36.2,1.7c0.9,0,1.5,0.8,1.5,1.6L47.5,6.5z"/>
+                  		<path id="grey" class="st5" d="M35.6,18.2c0,0.5-0.4,0.9-0.9,0.9H5.2c-0.5,0-0.9-0.4-0.9-0.9v-4.6c0-0.5,0.4-0.9,0.9-0.9h29.5
+                  			c0.5,0,0.9,0.4,0.9,0.9V18.2z"/>
+                  		<path class="st12" d="M44.6,23.1c0,0.5-0.4,0.9-0.9,1l-33.2,1c-0.5,0-0.9-0.4-0.9-0.9l-0.1-2.7c0-0.5,0.4-0.9,0.9-1l33.2-1
+                  			c0.5,0,0.9,0.4,0.9,0.9L44.6,23.1z"/>
+                  		<path id="blue" class="st36" d="M40.2,28.7c0,0.5-0.4,0.9-0.9,0.9H7.6c-0.5,0-0.9-0.4-0.9-0.9v-1.8c0-0.5,0.4-0.9,0.9-0.9h31.7
+                  			c0.5,0,0.9,0.4,0.9,0.9V28.7z"/>
+                  		<path class="st8" d="M41,10.5c0,0.4-0.6,0.7-1.3,0.7H1.3c-0.7,0-1.3-0.3-1.3-0.7V9c0-0.4,0.6-0.7,1.3-0.7h38.5
+                  			C40.4,8.3,41,8.6,41,9V10.5z"/>
+                  	</g>
+                  </g>
+                  <g id="nav">
+                  </g>
+                  <g id="Mobile">
+                  </g>
+                  <g id="guides" class="st45">
+                  </g>
+                  </svg>                </span>
             </a>
-        </span>
+            <span class="logo-quote">Access. The future of education.</span>
+          </span>
 
-        <span class="flex-1-0 hidden-desktop">
-            <button class="expand-nav">&#9776;</button>
-        </span>
-
-        <ul class="nav-menu flex-3-0">
-            <li class="nav-menu-item"><a href="/subjects">Subjects</a></li>
-            <li class="nav-menu-item"><a href="/tools">Tools</a></li>
-            <li class="nav-menu-item"><a href="/k-12">K-12</a></li>
-            <li class="nav-menu-item"><a href="/higher-ed">Higher Education</a></li>
-            <li class="nav-menu-item"><a href="/research">Research</a></li>
+        <ul class="nav-menu">
+          <li class="nav-menu-item"><a href="/subjects">Subjects</a></li>
+          <li class="nav-menu-item"><a href="/higher-ed">Higher Education</a></li>
+          <li class="nav-menu-item"><a href="/k-12">K-12</a></li>
         </ul>
 
-        <span class="flex-1-0 logo-wrapper visible-desktop">
-            <a class="logo rice-logo" href="/" aria-label="Rice University">
-                <img src="/images/rice.png" alt="Rice University logo" width="74" height="32" />
-            </a>
-        </span>
-    </nav>
+          <button class="expand-nav" type="button" role="button" aria-label="Toggle Navigation">
+            <span></span>
+          </button>
+
+        </nav>
 </header>
