--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,1 +1,9 @@
 @import 'mixins/responsive';
+
+@mixin line {
+  display: inline-block;
+  width: $button-size;
+  height: $button-size/7;
+  background: #5E6062;
+  transition: $transition;
+}
