--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -3,10 +3,23 @@
     <main id="maincontent">
         <os-carousel></os-carousel>
 
-        <h1>What We Do</h1>
-        <p> Free, peer-reviewed textbooks. Digital learning tools. Open education resources.
-            OpenStax is working for greater access to education. We make it easy to adopt high-quality,
-            affordable learning materials for your students.
-        </p>
+
+<h1>Hello World</h1>
+    </main>
+</div>
+<div class="home-page">
+    <main id="maincontent">
+        <os-carousel></os-carousel>
+
+
+
+    </main>
+</div>
+<div class="home-page">
+    <main id="maincontent">
+        <os-carousel></os-carousel>
+
+
+
     </main>
 </div>
