--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 // scss-lint:disable IdSelector
 @import 'variables';
 @import 'mixins';
+@import 'svg';
 
 html {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
