--- a/src/styles/mixins/responsive.scss
+++ b/src/styles/mixins/responsive.scss
@@ -17,3 +17,13 @@
         @content;
     }
 }
+
+@mixin mobile {
+  @media (max-width: #{breakpoints(tablet)}) {
+      @content;
+  }
+}
+
+@mixin flex($grow, $shrink, $basis) {
+  flex: $grow $shrink $basis;
+}
