Refactor to use @on events
Factored sectionToggler into separate object
amend: remove alert

--- a/src/app/pages/adoption-form/adoption-form.hbs
+++ b/src/app/pages/adoption-form/adoption-form.hbs
@@ -13,7 +13,7 @@
 </p>
 <form accept-charset="UTF-8" action="/adoptions" class="new_adoption"
  id="new_adoption" method="post">
-    <div style="margin:0;padding:0;display:inline">
+    <div>
         <input name="utf8" type="hidden" value="✓" />
         <input name="authenticity_token" type="hidden" value="Xi14qRzCbSy2zkso1VEjKU4bEUfFWOrhWbQnh7tlO3c=" />
     </div>
@@ -76,7 +76,7 @@
     <label>
         <input checked="checked" name="adoption[interested_in_newsletter_feature]" type="radio" value="true">
         Yes
-        </label>
+    </label>
     <label>
         <input name="adoption[interested_in_newsletter_feature]" type="radio" value="false">
         No
