--- a/src/app/pages/adoption-form/book-info/book-info.hbs
+++ b/src/app/pages/adoption-form/book-info/book-info.hbs
@@ -33,11 +33,11 @@
         Recommending the book as an option. The students purchase a different book.
     </label>
 </fieldset>
-Which partner resources are you using with the OpenStax College book?
-<fieldset class="labeled-buttons require-one" >
-    <div class="validation-message">
+<p>Which partner resources are you using with the OpenStax College book?</p>
+<fieldset class="labeled-buttons require-one">
+    <legend class="validation-message">
         Select at least one
-    </div>
+    </legend>
     <label>
         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="None">
         None
@@ -55,7 +55,7 @@ Which partner resources are you using with the OpenStax College book?
          Expert TA
      </label>
      <label>
-         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="Lrnr ">
+         <input name="{{prefix}}[partner_resources][]" type="checkbox" value="Lrnr">
          Lrnr
      </label>
      <label>
