--- a/src/app/pages/home/home.hbs
+++ b/src/app/pages/home/home.hbs
@@ -39,3 +39,35 @@
 
     </main>
 </div>
+
+
+<div class="buckets-wrap">
+	<div class="container">
+		<div class="col">
+			<div class="b-img"></div>
+			<div class="b-text">
+				<blockquote>“At first I was like, nope, and now I’m like, yep!”<br> &mdash; <cite>Juan C.</cite></blockquote>
+				<a href="" class="btn-small" title="learn more">learn more</a>
+			</div>
+		</div>
+		
+		<div class="col">
+			<div class="b-text">
+				<p>Here is a place where some cool stuff happened. Check it out.</p>
+				<a href="" class="btn-small" title="learn more">learn more</a>
+			</div>
+			<div class="b-img"></div>			
+		</div>
+		
+		<div class="col no-img">
+			<p>No picture, no big deal. Talking about how great something is. “It could be a testmonial from a teacher.”</p>
+			<a href="" class="btn-small" title="learn more">learn more</a>
+		</div>				
+	</div>
+</div>
+
+<div class="banner-wrap">
+	<div class="container">
+		red			
+	</div>
+</div>
