--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,8 @@ body {
     font-size: 1.4rem;
     margin: 0;
     min-height: 100vh;
+    -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;    
 
     #main {
         display: flex;
@@ -23,6 +25,7 @@ body {
         > div {
             display: flex;
             width: 100vw;
+            flex-direction: column;
         }
     }
 }
