--- a/src/styles/mixins/responsive.scss
+++ b/src/styles/mixins/responsive.scss
@@ -17,3 +17,15 @@
         @content;
     }
 }
+
+@mixin tablet-sm {
+    @media (min-width: #{breakpoints(phone) + 1}) and (max-width: #{breakpoints(tablet) - 1}) {
+        @content;
+    }
+}
+
+@mixin tablet-up {
+    @media (min-width: #{breakpoints(phone) + 1}) {
+        @content;
+    }
+}
