--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,5 @@
 @import 'variables/colors';
 @import 'variables/responsive';
+@import 'variables/settings';
+@import 'variables/opposite-directions';
+
